--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
-<<<<<<< HEAD
-	<title data-ng-if="currency.testnet" data-ng-bind="$root.title + $root.titleDetail + ' | Testnet Insight'">Komodo Explorer</title>
-	<title data-ng-if="!currency.testnet" data-ng-bind="$root.title + $root.titleDetail + ' | Insight'">Komodo Explorer</title>
+  <title data-ng-if="currency.testnet">Explorer | Ciphscoin</title>
+	<title data-ng-if="!currency.testnet">Explorer | Ciphscoin</title>
 	<meta name="keywords" content="komodo, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
-=======
-	<title data-ng-if="currency.testnet" data-ng-bind="$root.title + $root.titleDetail + ' | Testnet Insight'">Ciphscoin Explorer</title>
-	<title data-ng-if="!currency.testnet" data-ng-bind="$root.title + $root.titleDetail + ' | Insight'">Ciphscoin Explorer</title>
-	<meta name="keywords" content="ciphscoin, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
->>>>>>> 7f283d9640791ad054d4004611fe932fa52bfa15
 	<meta data-ng-if="currency.testnet" name="description" content="Ciphscoin Insight. View detailed information on all testnet CIPHS transactions and block.">
 	<meta data-ng-if="!currency.testnet" name="description" content="Ciphscoin Insight. View detailed information on all CIPHS transactions and block.">
 	<link rel="shortcut icon" href="img/icons/favicon.ico" type="image/x-icon">
